white space bug removed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -500,8 +500,8 @@ a:hover{
     -o-user-select:none;
     user-select:none;
     float:right;
-    line-height:2em;
-    margin-top:1.7em;
+    line-height:2.5em;
+    margin-top:1em;
     background-color:#2e8b57;
     border-radius:4px;
     padding:0 0.6em;
@@ -557,7 +557,7 @@ dd{
     padding-left:2rem;
     letter-spacing:0px;
     font-size:2em;
-    line-height:3em;
+    line-height:2.5em;
     font-family:Crimson Text,Open Sans,Helvetica,Arial,sans-serif;
     font-weight:700;
     text-transform:uppercase;
